# cw20-staking

./: Cargo.toml  README.md
contracts/cw20-staking/: Cargo.toml
contracts/cw20-staking/examples/: schema.rs
contracts/cw20-staking/schema/: oraiswap-staking.json
contracts/cw20-staking/src/: contract.rs  lib.rs  msg.rs  rewards.rs  staking.rs  state.rs
contracts/cw20-staking/src/testing/: contract_test.rs  mod.rs  reward_test.rs  staking_test.rs
contracts/oraiswap_staking/src/: contract.rs  rewards.rs  staking.rs  state.rs
contracts/oraiswap_staking/src/testing/: contract_test.rs  reward_test.rs  staking_test.rs
contracts/proxy-snapshot/: Cargo.toml
contracts/proxy-snapshot/examples/: schema.rs
contracts/proxy-snapshot/schema/: proxy-snapshot.json
contracts/proxy-snapshot/src/: contract.rs  lib.rs  msg.rs  multitest.rs  state.rs
contracts/proxy-snapshot/src/multitest/: contract.rs  cw20_staking_contract.rs  mock_cw20.rs  tests.rs
src/: contract.rs  msg.rs  rewards.rs  staking.rs  state.rs
src/testing/: contract_test.rs  reward_test.rs  staking_test.rs
